--- a/app/frontend/views/product-listing.html
+++ b/app/frontend/views/product-listing.html
@@ -6,72 +6,83 @@
 		Home / <span style="font-weight:bold;">{{ activeCategory.name || listingTitle }}</span>
 	</div> -->
 </div>
- <loader></loader> 
+
+<loader></loader> 
 <div id="main" ng-hide="loading" >
 	<div class="container">
-		<!-- <div class="row">
-			<div class="col-md-8"></div>
-			<div class="col-md-4">
-				<div class="well well-sm clearfix">
-					<div class="btn-group pull-right">
-						<a href="" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-th-list"></span></a> 
-						<a href="" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-th"></span></a>
-					</div>
-				</div> 
-			</div> 
-		</div> -->
-		<div class="row">
-			
-			<div class="col-xs-12">
-				<div class="bar">
-					<div class="pull-left">
-						 <!-- <div class="btn-group">
-						  <button type="button" class="btn btn-primary"> <i class="fa fa-filter"></i> {{ activeFilter.caption || 'Sort By'}}</button>
-						  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							<span class="caret"></span>
-							<span class="sr-only">Toggle Dropdown</span>
-						  </button>
-						  <ul class="dropdown-menu">
-							<li ng-repeat="filter in filters">  <a href="" ng-click="setActiveFilter( filter )" > {{ filter.caption }} </a> </li>
-						  </ul>
-						</div>  -->
-						<div class="btn-group" uib-dropdown >
-						  <button type="button" class="btn btn-default btn-md" uib-dropdown-toggle style="min-width:150px;">
-							{{ activeFilter.caption || 'Look-up By'}}  <span class="caret"></span>
-						  </button>
-						  <ul class="dropdown-menu" uib-dropdown-menu role="menu" >
-							<li ng-repeat="filter in filters" role="menuitem">  <a href="" ng-click="setActiveFilter( filter )" > {{ filter.caption }} </a> </li>
-							</ul>
-						</div>
-						<a href="" ng-click="resetFilter()" > <i class="fa fa-refresh"></i> </a>
-					</div>
-					<a class="view list-icon" ng-class="{active: layout == 'list'}" ng-click="layout = 'list'"></a>
-					<a class="view grid-icon" ng-class="{active: layout == 'grid'}" ng-click="layout = 'grid'"></a>
-				</div>	
-			</div>
+		<div class="col-md-3">
+			<ul class="list-group">
+				<li class="list-group-item" ng-repeat="category in categories"> <a href="#!/products/{{ category._id }}" ng-click="setActiveCategory(category)"> {{category.name}} </a> </li>
+			</ul>
 		</div>
-		<div class="row grid" ng-show="layout == 'grid'" >
-			<div class="col-md-12 col-sm-12 col-xs-12"  >
-				<div class="container_fluid" >
-					<div class="row">
-						<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 anim-grid-check" ng-repeat="product in productList | orderBy:sortType:sortReverse:defaultFilter">
-							<product-grid-view></product-grid-view>
-							<hr/>
+		<div class="col-md-9">
+			<div class="container_fluid">
+				<!-- <div class="row">
+					<div class="col-md-8"></div>
+					<div class="col-md-4">
+						<div class="well well-sm clearfix">
+							<div class="btn-group pull-right">
+								<a href="" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-th-list"></span></a> 
+								<a href="" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-th"></span></a>
+							</div>
+						</div> 
+					</div> 
+				</div> -->
+				<div class="row">
+					
+					<div class="col-xs-12">
+						<div class="bar">
+							<div class="pull-left">
+								 <!-- <div class="btn-group">
+								  <button type="button" class="btn btn-primary"> <i class="fa fa-filter"></i> {{ activeFilter.caption || 'Sort By'}}</button>
+								  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+									<span class="caret"></span>
+									<span class="sr-only">Toggle Dropdown</span>
+								  </button>
+								  <ul class="dropdown-menu">
+									<li ng-repeat="filter in filters">  <a href="" ng-click="setActiveFilter( filter )" > {{ filter.caption }} </a> </li>
+								  </ul>
+								</div>  -->
+								<div class="btn-group" uib-dropdown >
+								  <button type="button" class="btn btn-default btn-md" uib-dropdown-toggle style="min-width:150px;">
+									{{ activeFilter.caption || 'Look-up By'}}  <span class="caret"></span>
+								  </button>
+								  <ul class="dropdown-menu" uib-dropdown-menu role="menu" >
+									<li ng-repeat="filter in filters" role="menuitem">  <a href="" ng-click="setActiveFilter( filter )" > {{ filter.caption }} </a> </li>
+									</ul>
+								</div>
+								<a href="" ng-click="resetFilter()" > <i class="fa fa-refresh"></i> </a>
+							</div>
+							<a class="view list-icon" ng-class="{active: layout == 'list'}" ng-click="layout = 'list'"></a>
+							<a class="view grid-icon" ng-class="{active: layout == 'grid'}" ng-click="layout = 'grid'"></a>
+						</div>	
+					</div>
+				</div>
+				<div class="row grid" ng-show="layout == 'grid'" >
+					<div class="col-md-12 col-sm-12 col-xs-12"  >
+						<div class="container_fluid" >
+							<div class="row">
+								<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 anim-grid-check" ng-repeat="product in productList | orderBy:sortType:sortReverse:defaultFilter">
+									<product-grid-view></product-grid-view>
+									<hr/>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-		</div>
-		<div class="row list" ng-show="layout == 'list'" >
-			<div class="col-md-12"  >
-				<div ng-repeat="product in productList | orderBy:sortType:sortReverse:defaultFilter" class="anim-grid-check">
-					<product-list-view></product-list-view>
-					<hr ng-if="!$last"/>
+				<div class="row list" ng-show="layout == 'list'" >
+					<div class="col-md-12"  >
+						<div ng-repeat="product in productList | orderBy:sortType:sortReverse:defaultFilter" class="anim-grid-check">
+							<product-list-view></product-list-view>
+							<hr ng-if="!$last"/>
+						</div>
+					</div>
 				</div>
-			</div>
-		</div>
 
+			</div>
+		</div>
 	</div>
+	
 </div>
 
 
