--- a/app/frontend/views/cart.html
+++ b/app/frontend/views/cart.html
@@ -4,7 +4,7 @@
 	</div>
 </div>   -->
 <loader></loader>
-<div class="view-cart-page">
+<div class="view-cart-page" ng-hide="loading">
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12">
