--- a/app/frontend/views/product-listing.html
+++ b/app/frontend/views/product-listing.html
@@ -12,7 +12,7 @@
 	<div class="container">
 		<div class="col-md-3">
 			<ul class="list-group">
-				<li class="list-group-item" ng-repeat="category in categories"> <a href="#!/products/{{ category._id }}" ng-click="setActiveCategory(category)"> {{category.name}} </a> </li>
+				<a class="{{category._id === activeCategory._id ?'list-group-item active':'list-group-item'}}" ng-repeat="category in categories" ng-href="#!/products/{{ category._id }}"> {{category.name}}  <!-- <a href="#!/products/{{ category._id }}" ng-click="setActiveCategory(category)"> {{category.name}} </a> --> </a>
 			</ul>
 		</div>
 		<div class="col-md-9">
